# Knowing_vs_Showing_IML_2026

./: .gitignore  ATTRIBUTION.md  README.md  pyproject.toml
experiments/01_gap_two_way/: README.md  run.py
experiments/02_layer_probe_sweep/: README.md  run.py
experiments/03_logit_lens_sweep/: README.md  run.py
experiments/04_choice_by_logprob/: README.md  run.py
outputs/: exp1_two_way_tqa_full_gemma_seed20.csv  exp1_two_way_tqa_full_llama_seed20.csv  exp1_two_way_tqa_full_olmo_seed20.csv  olmo_choice_logprob_tqa_full_run2.csv  olmo_choice_logprob_tqa_full_run2_config.json  olmo_layer_logitlens_tqa_full_run2.csv  olmo_layer_logitlens_tqa_full_run2_config.json  olmo_layer_probe_tqa_full_run2.csv  olmo_layer_probe_tqa_full_run2_config.json  smoke_exp04_choice_logprob.csv  smoke_exp04_choice_logprob_config.json
src/knowing_vs_showing/: __init__.py  parsing.py  personas.py  settings.py  utils.py
src/knowing_vs_showing/datasets/: __init__.py  truthfulqa.py
src/knowing_vs_showing/experiments/: __init__.py  exp1_gap_two_way.py  exp2_layer_probe_sweep.py  exp3_logit_lens_sweep.py  exp4_choice_logprob.py
src/knowing_vs_showing/models/: hf_loader.py
src/knowing_vs_showing/probing/: __init__.py  logreg.py
src/knowing_vs_showing/prompts/: __init__.py  truthfulqa.py
