[tool.poetry]
name = "knowing-vs-showing"
version = "0.1.0"
description = "Reproducible experiments for measuring a knowing–showing (knowledge–generation) gap in LLMs under persona cues."
authors = ["Steffan Wolter"]
readme = "README.md"
packages = [{ include = "knowing_vs_showing", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
torch = ">=2.0.0"
transformers = ">=5.0.0"
datasets = ">=4.5.0"
accelerate = ">=1.0.0"
numpy = "<2"
pandas = ">=2.0.0"
scikit-learn = ">=1.3.0"
scipy = ">=1.11.0,<2"
tqdm = ">=4.0.0"
bitsandbytes = { version = ">=0.49.0", optional = true }
matplotlib = { version = ">=3.8.0", optional = true }

[tool.poetry.extras]
quant = ["bitsandbytes"]
plot = ["matplotlib"]

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
ruff = "^0.6.0"

[tool.poetry.scripts]
kvs-exp1-gap = "knowing_vs_showing.experiments.exp1_gap_two_way:main"
kvs-exp2-layer-probe = "knowing_vs_showing.experiments.exp2_layer_probe_sweep:main"
kvs-exp3-logit-lens = "knowing_vs_showing.experiments.exp3_logit_lens_sweep:main"
kvs-exp4-choice-logprob = "knowing_vs_showing.experiments.exp4_choice_logprob:main"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
